--- a/templates/form.html
+++ b/templates/form.html
@@ -322,6 +322,7 @@
                 <textarea id="Opportunities" name="Opportunities" placeholder=" " rows="4">{{ form_data.Opportunities|default:form.Challenges.value }}</textarea>
                 <label for="Challenges">Challenges</label>
                 <textarea id="Challenges" name="Challenges" placeholder=" " rows="4">{{ form_data.Challenges|default:form.Strengths.value  }}</textarea>
+                <h1>Non-Academic Observations:</h1>
                 <label for="nao">Non-Academic Observations:</label>
                 <textarea id="nao" name="nao" placeholder=" " rows="4">{{ form_data.nao|default:form.nao.value}}</textarea>
                 <label for="ao">Academic Observations</label>
