--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load username_filters %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -98,7 +99,7 @@
                 <span class="num">1</span>
             </a>
             <a href="#" class="profile">
-                <h1>{{ user.username }}!</h1>
+                <h1>{{ user.username|readable_username }}!</h1>
             </a>
         </nav>
 
