--- a/templates/followup_form.html
+++ b/templates/followup_form.html
@@ -317,7 +317,7 @@
                 <input type="hidden" name="token" value="{{ token }}">
                 
                 <!-- Submit Button -->
-                <input type="submit" name="submit" value="Submit Form" />
+                <input type="submit" name="submit" value="Save Form" />
             </form>
             
         </div>
