--- a/templates/mentor_dashboard.html
+++ b/templates/mentor_dashboard.html
@@ -130,43 +130,43 @@
 
         
         <div class="recent">
-            <!-- Loop through the recent main forms -->
-            
+            <!-- Loop through the recent main forms --> 
             {% for form in recent_mainform %}
-              <div class="form-item">
-                  <div class="bx">
-                      <i class='bx bxs-user'></i>
-                  </div>
-                  <h3>{{ form.name }}</h3>
-                  <p>Date: {{ form.date }}</p>
-                  
-                  <p>Roll No: {{form.rollno}}</p>
-              </div>
+            <a href="{% url 'form_student' student.id mentor.id %}" class="btn">Add a Mentor Form</a>  
+                    <div class="form-item">
+                        <div class="bx">
+                            <i class='bx bxs-user'></i>
+                        </div>
+                        <h3>{{ form.name }}</h3>
+                        <p>Date: {{ form.date }}</p>
+                        <p>Roll No: {{ form.rollno }}</p>
+                    </div>
+                </a>
             {% empty %}
-              <div class="form-item no-data">
-                  <p>No recent main forms available</p>
-              </div>
+                <div class="form-item no-data">
+                    <p>No recent main forms available</p>
+                </div>
             {% endfor %}
         </div>
         
         <div class="recent">
             <!-- Loop through the recent follow-up forms -->
             {% for followup in recent_followupform %}
-              <div class="form-item">
-                  <div class="bx">
-                      <i class='bx bxs-user'></i>
-                  </div>
-                  <h3>{{ followup.name }}</h3>
-                  <p>Date: {{ followup.date }}</p>
-                  <p>Roll No: {{form.rollno}}</p>
-              </div>
+            <a href="{% url 'followup_form_student' students.id mentor.id %}" class="btn">Add a Followup Form</a>
+                    <div class="form-item">
+                        <div class="bx">
+                            <i class='bx bxs-user'></i>
+                        </div>
+                        <h3>{{ followup.name }}</h3>
+                        <p>Date: {{ followup.date }}</p>
+                        <p>Roll No: {{ followup.rollno }}</p>
+                    </div>
+                </a>
             {% empty %}
-              <div class="form-item no-data">
-                  <p>No recent follow-up forms available</p>
-              </div>
+                <div class="form-item no-data">
+                    <p>No recent follow-up forms available</p>
+                </div>
             {% endfor %}
-            
-            
         </div>
         
         
