jugaad of recents css yash tuje dynamic bana na hai

--- a/templates/followup_form_student_view.html
+++ b/templates/followup_form_student_view.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mentor Form</title>
+    <title>Follow-up Form</title>
     <style>
         /* General Reset */
         * {
@@ -207,7 +207,7 @@
 
     <div class="form-wrapper">
         <div class="form-container">
-            <h1>Mentor Form</h1>
+            <h1>Follow-up Form</h1>
             {% if mentor %}
                 <h3>Mentor Name: {{ mentor.username }}</h3>
             {% else %}
