--- a/templates/mentor_dashboard.html
+++ b/templates/mentor_dashboard.html
@@ -45,14 +45,14 @@
     }
 
     .form-item iframe {
-        width: 180%;
-        height: 180%;
+        width: 181%;
+        height: 215%;
         border: none;
-        transform: scale(0.55);
+        transform: scale(0.74);
         transform-origin: center;
         position: absolute;
-        top: -40%;
-        left: -40%;
+        top: -90%;
+        left: -43.18%;
         pointer-events: none; /* This prevents interaction with the iframe content */
     }
 
@@ -121,16 +121,16 @@
         font-weight: 600;
         color: #2c3e50;
         padding: 15px 20px;
-        background-color: #e3f2fd;
+        background-color: #7879FF;
         border-bottom: 2px solid #bbdefb;
         margin: 0;
-        border-radius: 12px 12px 0 0;
+        
     }
 
     .section-content {
         padding: 20px;
-        border-radius: 12px 12px 0 0;
-        background-color: t
+        
+        background-color: #BFBFFF;
     }
 
     .recent {
